2009-10-29  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10717]
	* malloc/memusagestat.c (main): Fix repairing of trace files.  We also
	have to compute maxsize_total, we have to update the variables, and
	the also_total handling must happen after the repair.

	[BZ #10742]
	* nscd/dbg_log.c (dbg_log): Print timestamp before the message text.
	Based on patch by Jeffrey Bastian <jbastian@redhat.com>.

2009-10-27  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/getpt.c (__posix_openpt): Make sure
	errno is always set when returning unsuccessfully.

2009-10-29  Andreas Schwab  <schwab@redhat.com>

	* malloc/memusage.c (update_data): Fix index wraparound handling
	so that buffer_cnt is actually reset.

2009-10-29  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10784]
	* sysdeps/unix/sysv/linux/ttyname.c (getttyname): Always copy name
	of the directory we look at into the static buffer if there is one
	at the start of the loop.

	[BZ #10789]
	* sysdeps/generic/netinet/ip.h: Define IPTOS_ENC* and IPTOS_DSCP*
	macros.  Patch by Philip Prindeville <philipp@redfish-solutions.com>.

	[BZ #10840]
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_F_GETOWN_EX.
	* sysdeps/unix/sysv/linux/fcntl.c: Implement F_GETOWN using F_GETOWN_EX
	if possible.
	* sysdeps/unix/sysv/linux/i386/fcntl.c: Likewise.

	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Define F_OWNER_*
	and f_owner_ex.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.

	[BZ #10847]
	* sysdeps/gnu/getutmp.c: Allow compatibility code to play around with
	getutmpx symbol.

	[BZ #10823]
	* resolv/res_send.c (__libc_res_nsend): Fix copying of IPv4 server
	addresses.  Patch by Petar Bogdanovic <petar@smokva.net>.
