@@ -1,4 +1,4 @@
-/* Copyright (C) 1993,1996,1997,1998,1999,2003 Free Software Foundation, Inc.
+/* Copyright (C) 1993,1996-1999,2003,2009 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -27,6 +27,7 @@
 
 #include "libioP.h"
 #include <string.h>
+#include <limits.h>
 
 int
 _IO_puts (str)
@@ -40,7 +41,7 @@ _IO_puts (str)
        || _IO_fwide (_IO_stdout, -1) == -1)
       && _IO_sputn (_IO_stdout, str, len) == len
       && _IO_putc_unlocked ('\n', _IO_stdout) != EOF)
-    result = len + 1;
+    result = MIN (INT_MAX, len + 1);
 
   _IO_release_lock (_IO_stdout);
   return result;
