@@ -1,5 +1,9 @@
 2009-10-29  Ulrich Drepper  <drepper@redhat.com>
 
+	[BZ #10780]
+	* libio/ioputs.c (_IO_puts): Make sure to not return a number which
+	overflows the int return type.
+
 	[BZ #10717]
 	* malloc/memusagestat.c (main): Fix repairing of trace files.  We also
 	have to compute maxsize_total, we have to update the variables, and
